<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_image_container2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="99dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/content_description_fragment_profile_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/a"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/profile_username"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/hint_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_image_container2"
                app:layout_constraintTop_toTopOf="@+id/profile_image_container2" />

            <TextView
                android:id="@+id/profile_email"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hint_email"
                app:layout_constraintEnd_toEndOf="@+id/profile_username"
                app:layout_constraintStart_toStartOf="@+id/profile_username"
                app:layout_constraintTop_toBottomOf="@+id/profile_username" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/profile_button_account"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/button_account"
        app:layout_constraintEnd_toEndOf="@+id/profile_image_container"
        app:layout_constraintStart_toStartOf="@+id/profile_image_container"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_container" />

    <Button
        android:id="@+id/profile_button_privacy"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/button_privacy"
        app:layout_constraintEnd_toEndOf="@+id/profile_button_account"
        app:layout_constraintStart_toStartOf="@+id/profile_image_container"
        app:layout_constraintTop_toBottomOf="@+id/profile_button_account" />

    <Button
        android:id="@+id/profile_button_help"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/button_help"
        app:layout_constraintEnd_toEndOf="@+id/profile_button_account"
        app:layout_constraintStart_toStartOf="@+id/profile_image_container"
        app:layout_constraintTop_toBottomOf="@+id/profile_button_privacy" />
</androidx.constraintlayout.widget.ConstraintLayout>
