<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_result"
    tools:context=".ui.fragment.ResultFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/result_image_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/result_image_scan_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintEnd_toStartOf="@id/result_image_result_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/result_image_scan"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/result_image_result_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/result_image_scan_card"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/result_image_result"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/result_text_scan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/text_scan"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/result_image_scan_card"
                app:layout_constraintStart_toStartOf="@+id/result_image_scan_card"
                app:layout_constraintTop_toBottomOf="@+id/result_image_scan_card" />

            <TextView
                android:id="@+id/result_text_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/text_result"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/result_image_result_card"
                app:layout_constraintStart_toStartOf="@+id/result_image_result_card"
                app:layout_constraintTop_toBottomOf="@+id/result_image_result_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@id/result_image_card"
        app:layout_constraintStart_toStartOf="@id/result_image_card"
        app:layout_constraintTop_toBottomOf="@id/result_image_card" />

    <TextView
        android:id="@+id/result_text_description_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@id/result_image_card"
        app:layout_constraintStart_toStartOf="@id/result_image_card"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/result_text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_description"
        app:layout_constraintEnd_toEndOf="@+id/result_image_card"
        app:layout_constraintStart_toStartOf="@+id/result_image_card"
        app:layout_constraintTop_toBottomOf="@+id/result_text_description_title" />

    <Button
        android:id="@+id/result_button_shopee"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button_shopee"
        app:layout_constraintEnd_toStartOf="@id/result_button_tokopedia"
        app:layout_constraintStart_toStartOf="@+id/result_image_card"
        app:layout_constraintTop_toBottomOf="@+id/result_text_description" />

    <Button
        android:id="@+id/result_button_tokopedia"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/button_tokopedia"
        app:layout_constraintEnd_toEndOf="@+id/result_image_card"
        app:layout_constraintStart_toEndOf="@+id/result_button_shopee"
        app:layout_constraintTop_toBottomOf="@+id/result_text_description" />
</androidx.constraintlayout.widget.ConstraintLayout>
